--- a/login.html
+++ b/login.html
@@ -42,7 +42,12 @@
                 <button type="submit">Login</button>
             </form>
             <p id="errorMessage" style="color: red;"></p>
+            <div>
             <a href="http://localhost:3000/auth/google">Login with Google</a> <!-- Corrected URL -->
+            </div>
+            <div>
+            <a href="http://localhost:3000/auth/github">Login with GitHub</a>
+        </div>
         </div>
     </section>
 
